solve TODOs